--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-intersection-observer": "^9.5.3",
+    "react-loading": "^2.0.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
